--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET=1
-URI_MONGODB=mongodb://127.0.0.1:27017/ShopQuanAo
+URI_MONGODB=mongodb+srv://minhto28dev:uwvMIB1tPY1bQA8v@baemin.azl85up.mongodb.net/ShopQuanAo
